samples/_failures_safe/1761185881_e8a932_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18eff3b0.c: In function ‘main’:
./samples/SAFE/__tmp_18eff3b0.c:125:17: error: expected identifier or ‘(’ at end of input
  125 |                 size_t
      |                 ^~~~~~
./samples/SAFE/__tmp_18eff3b0.c:125:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_18eff3b0.c:125:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_18eff3b0.c:125:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_18eff3b0.c:125:17: error: expected declaration or statement at end of input
